--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -17,6 +17,7 @@
             android:layout_height="?attr/actionBarSize"
             app:layout_scrollFlags="scroll|enterAlways|snap"
             android:background="@color/colorPrimary"
+            app:titleTextColor="@color/white"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <ImageView
