--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -1,8 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"> <!-- Ensures the content fills the viewport initially -->
+    android:orientation="vertical"
+    android:background="@color/white">
+
+    <!-- Toolbar -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:title="ADD Product"
+        android:titleTextColor="@android:color/white"/>
+
+
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +38,7 @@
             android:hint="Product Title"
             android:paddingLeft="26dp"
             android:paddingRight="26dp"
-            android:background="@drawable/edit_text"
+            android:background="@drawable/edit_text_add_product"
             android:textColorHint="#70000000"
             android:theme="@style/BlackTheme"
             android:inputType="text" />
@@ -35,72 +52,11 @@
             android:hint="Product Subtitle"
             android:paddingLeft="26dp"
             android:paddingRight="26dp"
-            android:background="@drawable/edit_text"
+            android:background="@drawable/edit_text_add_product"
             android:textColorHint="#70000000"
             android:theme="@style/BlackTheme"
             android:inputType="text" />
 
-        <!-- Product Price -->
-        <EditText
-            android:id="@+id/product_price"
-            android:layout_height="52dp"
-            android:layout_width="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="8dp"
-            android:hint="Product Price"
-            android:paddingLeft="26dp"
-            android:paddingRight="26dp"
-            android:background="@drawable/edit_text"
-            android:textColorHint="#70000000"
-            android:theme="@style/BlackTheme"
-            android:inputType="numberDecimal" />
-        <EditText
-            android:id="@+id/product_view_type"
-            android:layout_height="52dp"
-            android:layout_width="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="8dp"
-            android:hint="Product View Type 2 or 3"
-            android:paddingLeft="26dp"
-            android:paddingRight="26dp"
-            android:background="@drawable/edit_text"
-            android:textColorHint="#70000000"
-            android:theme="@style/BlackTheme"
-            android:inputType="numberDecimal" />
-
-        <EditText
-            android:id="@+id/product_category"
-            android:layout_height="52dp"
-            android:layout_width="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="10dp"
-            android:hint="Product Category"
-            android:paddingLeft="26dp"
-            android:paddingRight="26dp"
-            android:background="@drawable/edit_text"
-            android:textColorHint="#70000000"
-            android:theme="@style/BlackTheme"
-            android:inputType="text" />
-
-        <EditText
-            android:id="@+id/product_cod"
-            android:layout_height="52dp"
-            android:layout_width="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="10dp"
-            android:hint="Is Cash on Delivery Available?"
-            android:paddingLeft="26dp"
-            android:paddingRight="26dp"
-            android:background="@drawable/edit_text"
-            android:textColorHint="#70000000"
-            android:theme="@style/BlackTheme"
-            android:inputType="text" />
-
-        <!-- Product Description -->
         <EditText
             android:id="@+id/product_description"
             android:layout_height="wrap_content"
@@ -111,96 +67,170 @@
             android:hint="Product Description"
             android:paddingLeft="26dp"
             android:paddingRight="26dp"
-            android:background="@drawable/edit_text"
+            android:background="@drawable/edit_text_add_product"
             android:textColorHint="#70000000"
             android:theme="@style/BlackTheme"
             android:inputType="textMultiLine"
             android:lines="4" />
 
-        <!-- Image URL 1 -->
+        <!-- Product Price -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="2">
         <EditText
-            android:id="@+id/image_url_1"
+            android:id="@+id/product_price"
             android:layout_height="52dp"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="8dp"
+            android:hint="Price"
             android:paddingLeft="26dp"
             android:paddingRight="26dp"
-            android:background="@drawable/edit_text"
+            android:background="@drawable/edit_text_add_product"
             android:textColorHint="#70000000"
             android:theme="@style/BlackTheme"
-            android:hint="Product Image URL 1"
-            android:inputType="textUri" />
+            android:inputType="numberDecimal" />
 
-        <!-- Image Preview 1 -->
-        <ImageView
-            android:id="@+id/image_preview_1"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="8dp"
-            android:contentDescription="Image Preview 1"
-            android:scaleType="centerCrop"
-            android:layout_gravity="center" />
-
-        <!-- Image URL 2 -->
-        <EditText
-            android:id="@+id/image_url_2"
+        <Spinner
+            android:id="@+id/product_category"
+            android:layout_width="0dp"
             android:layout_height="52dp"
-            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="10dp"
+            android:paddingLeft="26dp"
+            android:paddingRight="26dp"
+            android:background="@drawable/edit_text_add_product"
+            android:theme="@style/BlackTheme"
+            android:spinnerMode="dropdown"
+            android:popupBackground="@color/white" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="2">
+        <EditText
+            android:id="@+id/product_view_type"
+            android:layout_height="52dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="8dp"
+            android:hint="Select View"
             android:paddingLeft="26dp"
             android:paddingRight="26dp"
-            android:background="@drawable/edit_text"
+            android:background="@drawable/edit_text_add_product"
             android:textColorHint="#70000000"
             android:theme="@style/BlackTheme"
-            android:hint="Product Image URL 2"
-            android:inputType="textUri" />
+            android:focusable="false"
+            android:clickable="true"
+            android:cursorVisible="false"
+            android:inputType="none" />
 
-        <!-- Image Preview 2 -->
-        <ImageView
-            android:id="@+id/image_preview_2"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="8dp"
-            android:contentDescription="Image Preview 2"
-            android:scaleType="centerCrop"
-            android:layout_gravity="center" />
 
-        <!-- Image URL 3 -->
-        <EditText
-            android:id="@+id/image_url_3"
+
+        <Spinner
+            android:id="@+id/product_cod"
+            android:layout_width="0dp"
             android:layout_height="52dp"
-            android:layout_width="match_parent"
-            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:layout_marginTop="8dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="8dp"
             android:paddingLeft="26dp"
-            android:paddingRight="26dp"
-            android:background="@drawable/edit_text"
-            android:textColorHint="#70000000"
+            android:background="@drawable/edit_text_add_product"
             android:theme="@style/BlackTheme"
-            android:hint="Image URL 3"
-            android:inputType="textUri" />
+            android:spinnerMode="dropdown"
+            android:popupBackground="@color/white"
+            android:drawableRight="@drawable/ic_spinner_arrow" />
 
-        <!-- Image Preview 3 -->
-        <ImageView
-            android:id="@+id/image_preview_3"
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add 3 Product Photos:"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:textStyle="bold"
+        android:textSize="20dp"/>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="8dp"
-            android:contentDescription="Image Preview 3"
-            android:scaleType="centerCrop"
-            android:layout_gravity="center" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginTop="16dp">
+
+            <!-- Image Placeholder 1 -->
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/image_preview_1"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/plus_placeholder"
+                    android:contentDescription="Image Preview 1"
+                    android:layout_gravity="center"
+                    android:scaleType="centerCrop" />
+            </LinearLayout>
+
+            <!-- Image Placeholder 2 -->
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/image_preview_2"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/plus_placeholder"
+                    android:contentDescription="Image Preview 2"
+                    android:layout_gravity="center"
+                    android:scaleType="centerCrop" />
+            </LinearLayout>
+
+            <!-- Image Placeholder 3 -->
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/image_preview_3"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/plus_placeholder"
+                    android:contentDescription="Image Preview 3"
+                    android:layout_gravity="center"
+                    android:scaleType="centerCrop" />
+            </LinearLayout>
+
+        </LinearLayout>
+
 
         <!-- City Spinner -->
         <Spinner
             android:id="@+id/city_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="20dp" />
 
         <!-- Add Product Button -->
         <Button
@@ -227,3 +257,4 @@
             android:layout_centerHorizontal="true" />
     </LinearLayout>
 </ScrollView>
+</LinearLayout>
