--- a/app/src/main/res/layout/fragment_business_details.xml
+++ b/app/src/main/res/layout/fragment_business_details.xml
@@ -104,7 +104,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Add Product"
-                android:backgroundTint="@color/colorPrimary"
+                android:enabled="false"
                 android:gravity="center" />
 
         </LinearLayout>
