--- a/app/src/main/res/layout/horizontal_scroll_item_layout.xml
+++ b/app/src/main/res/layout/horizontal_scroll_item_layout.xml
@@ -12,10 +12,10 @@
         android:id="@+id/h_s_product_image"
         android:layout_width="75dp"
         android:layout_height="75dp"
+        android:scaleType="fitCenter"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,9 +29,9 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
-        android:text="Only on Amazon"
+        android:text="SD 425 Processor"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimary"
+        android:textColor="#006400"
         android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/h_s_product_price"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Earn 200 pts"
+        android:text="Rs. 5999/-"
         android:textAlignment="center"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
